# sdk

./: .pre-commit-config.yaml  README.md  copy.bara.sky
.github/: dependabot.yml
python/: CHANGELOG.md  README.md  pyproject.toml  tox.ini
python/example/client/: async_main.py  main.py
python/example/task/: main.py
python/render_sdk/: __init__.py  render.py  render_async.py  render_sync.py  version.py
python/render_sdk/client/: __init__.py  client.py  errors.py  sse.py  sse_sync.py  types.py  util.py  util_sync.py  workflows.py  workflows_sync.py
python/render_sdk/client/tests/: test_client.py  test_method_parity.py  test_render.py  test_render_sync.py  test_sse.py  test_util.py  test_util_sync.py  test_workflows_sync.py
python/render_sdk/experimental/: __init__.py  experimental.py  experimental_sync.py
python/render_sdk/experimental/blob/: __init__.py  api.py  client.py  types.py
python/render_sdk/experimental/key_value/: __init__.py  api.py  compare.py  provider.py  types.py  utils.py
python/render_sdk/experimental/key_value/tests/: test_api.py  test_compare.py  test_provider.py
python/render_sdk/experimental/object/: __init__.py  api.py  api_sync.py  client.py  client_sync.py  e2e_helpers.py  types.py
python/render_sdk/experimental/object/tests/: test_client.py  test_e2e.py
python/render_sdk/public_api/: __init__.py
python/render_sdk/public_api/api/artifact_sources/: add_or_update_artifact_source_secret_file.py  create_artifact_source.py  delete_artifact_source.py  delete_artifact_source_env_var.py  delete_artifact_source_secret_file.py  get_artifact_source.py  get_env_vars_for_artifact_source.py  link_artifact_source_to_env_group.py  list_artifact_sources.py  list_artifacts_in_artifact_source.py  list_secret_files_for_artifact_source.py  retrieve_artifact_source_env_var.py  retrieve_artifact_source_secret_file.py  unlink_artifact_source_from_env_group.py  update_artifact_source.py  update_artifact_source_env_var.py  update_env_vars_for_artifact_source.py  update_secret_files_for_artifact_source.py
python/render_sdk/public_api/api/audit_logs/: list_organization_audit_logs.py  list_owner_audit_logs.py
python/render_sdk/public_api/api/blob_storage/: delete_blob.py  get_blob.py  list_blobs.py  put_blob.py
python/render_sdk/public_api/api/blueprints/: disconnect_blueprint.py  list_blueprint_syncs.py  list_blueprints.py  retrieve_blueprint.py  update_blueprint.py  validate_blueprint.py
python/render_sdk/public_api/api/custom_domains/: create_custom_domain.py  delete_custom_domain.py  list_custom_domains.py  refresh_custom_domain.py  retrieve_custom_domain.py
python/render_sdk/public_api/api/dedicated_i_ps/: create_dedicated_ip.py  delete_dedicated_ip.py  list_dedicated_ips.py  retrieve_dedicated_ip.py  update_dedicated_ip.py
python/render_sdk/public_api/api/deploys/: cancel_deploy.py  create_deploy.py  list_deploys.py  retrieve_deploy.py  rollback_deploy.py
python/render_sdk/public_api/models/: __init__.py  add_headers_response_201.py  add_or_update_artifact_source_secret_file_body.py  add_or_update_secret_file_body.py  artifact.py  artifact_source.py  artifact_source_git.py  artifact_source_git_region.py  artifact_source_image.py  artifact_source_patch_git.py  artifact_source_patch_git_region.py  artifact_source_patch_image.py  artifact_source_patch_input.py  artifact_source_post_input.py  artifact_source_with_cursor.py  audit_log.py  audit_log_actor.py  audit_log_actor_type.py  audit_log_event.py  audit_log_metadata.py  audit_log_status.py  audit_log_with_cursor.py  auto_deploy.py  auto_deploy_disabled.py  auto_deploy_enabled.py  auto_deploy_trigger.py  autoscaling_config.py  autoscaling_config_changed.py  autoscaling_criteria.py  autoscaling_criteria_percentage.py  autoscaling_ended.py  autoscaling_started.py  background_worker_details.py  background_worker_details_patch.py  background_worker_details_post.py  blob_metadata.py  blob_with_cursor.py  blueprint.py  blueprint_detail.py  blueprint_patch.py  (+378 more)
python/render_sdk/workflows/: __init__.py  _callback_models.py  _uds_http.py  app.py  cli.py  client.py  executor.py  runner.py  task.py
python/render_sdk/workflows/callback_api/: __init__.py
python/render_sdk/workflows/tests/: test_app.py  test_cli.py  test_end_to_end.py  test_executor.py  test_lazy_imports.py  test_registration.py  test_translate_errors.py  test_uds_http.py
python/scripts/: unasync.py
(+366 files in other folders)
